WINDUP-3602 Support for jdk17-eap7 testing (#901)
* Support for jdk17-eap7 testing

* Remove eap profile

* WINDUP-3602 Aligned properties to the one used in the windup-web-distribution project (#43)

* WINDUP-3602 Aligned properties to the one used in the windup-web-distribution project

* WINDUP-3602 Set 'defaultStorageProvider' property

* Remove space

---------

Co-authored-by: Marco Rizzi <mrizzi@users.noreply.github.com>