@@ -27,7 +27,10 @@
         <version.windup>6.2.0-SNAPSHOT</version.windup>
         <version.windup.cli>6.2.0-SNAPSHOT</version.windup.cli>
         <version.keycloak>18.0.2</version.keycloak>
+        <wildfly.groupId>org.wildfly</wildfly.groupId>
+        <wildfly.artifactId>wildfly-dist</wildfly.artifactId>
         <version.wildfly>23.0.2.Final</version.wildfly>
+        <wildfly.directory>wildfly-${version.wildfly}</wildfly.directory>
         <version.resteasy>3.15.1.Final</version.resteasy>
         <version.jboss.javaee>1.0.1.Final</version.jboss.javaee>
 
@@ -256,16 +259,6 @@
 
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=768m -XX:ReservedCodeCacheSize=128m</argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -362,6 +355,42 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>surefire-jdk11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>-Xms512m -Xmx2048m -XX:ReservedCodeCacheSize=128m</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>surefire-jdk17</id>
+            <activation>
+                <jdk>17</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>-Xms512m -Xmx2048m -XX:ReservedCodeCacheSize=128m --add-modules java.se --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                            <reuseForks>false</reuseForks>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
